# poker-ai

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  run.sh
ai/deep_cfr/: CMakeLists.txt
ai/deep_cfr/include/: cfr_network.hpp  cfr_neural_net.hpp  deep_cfr.hpp  deep_cfr_player.hpp  info_state.hpp  memory_buffer.hpp  neural_net.hpp  reservoir_buffer.hpp
ai/deep_cfr/src/: cfr_network.cpp  cfr_neural_net.cpp  deep_cfr.cpp  deep_cfr_player.cpp  info_state.cpp  memory_buffer.cpp  neural_net.cpp
ai/mytorch/: nn.hpp  tensor.cpp  tensor.hpp
ai/tmp/: deep_cfr_main.cpp  neural_net.cpp
build_support/: build-web-shell.sh  packages.sh  run_clang_format.py
engine/: CMakeLists.txt  actions.hpp  card.cpp  card.hpp  dealer.hpp  deck.cpp  deck.hpp  engine.cpp  engine.h  evaluator.cpp  evaluator.hpp  lookup_table.cpp  lookup_table.hpp  player.cpp  player.hpp  poker-engine-config.cmake  pot.cpp  pot.hpp
engine/include/: action.hpp  action_type.hpp  betting_round.hpp  card.hpp  deck.hpp  engine.hpp  evaluator.hpp  event_manager.hpp  game.hpp  hand_phase.hpp  player.hpp  player_state.hpp  pot.hpp  table.hpp  texas_holdem.hpp
engine/include/evaluation/: eval_card.hpp  evaluator.hpp  lookup_table.hpp
engine/src/: action.cpp  action_type.cpp  actions.cpp  card.cpp  dealer.cpp  deck.cpp  engine.cpp  evaluator.cpp  event_manager.cpp  game.cpp  hand_phase.cpp  lookup_table.cpp  player.cpp  player_state.cpp  pot.cpp  table.cpp  texas_holdem.cpp
engine/src/evaluation/: eval_card.cpp  evaluator.cpp  lookup_table.cpp
engine_old/: engine.h
engine_old/include/: hand_phase.hpp
engine_old/src/: hand_phase.cpp
engine_v2/: CMakeLists.txt
engine_v2/include/: action.hpp  deck.hpp  engine.hpp  evaluator.hpp  game.hpp  game_state.hpp  hand_phase.hpp  player.hpp  player_state.hpp  pot.hpp  state_machines.hpp
engine_v2/src/: game.cpp  pot.cpp
interface/: README
interface/clients/go/: go.mod
interface/server/: CMakeLists.txt
interface/server/examples/: client_example.cpp  poker_server_main.cpp  server_example.cpp
interface/server/include/: client.h  poker_server.h  server.h
interface/server/src/: poker_server.cpp  server.cpp
models/iter_1/: advantage_net_3.pt  advantage_net_4.pt
models/iter_10/: advantage_net_0.pt  advantage_net_1.pt  advantage_net_2.pt  advantage_net_3.pt  advantage_net_4.pt  advantage_net_5.pt  strategy_net.pt
models/iter_20/: advantage_net_0.pt  advantage_net_1.pt  advantage_net_2.pt  advantage_net_3.pt  advantage_net_4.pt  advantage_net_5.pt  strategy_net.pt
models/iter_25/: advantage_net_0.pt  advantage_net_5.pt  strategy_net.pt
models/latest/: advantage_net_1.pt  advantage_net_2.pt
src/: README.md
src/ai/deep_cfr/: deep_cfr.cpp  info_state.cpp
src/client/cpp/: client.cpp
src/diagrams/: control_flow.md  engine.md  message_flow.md  server_client.md  system_architecture.md
src/engine/: CMakeLists.txt  evaluator.cpp  game_state.cpp  poker_engine.cpp
src/engine/betting/: betting_state.cpp
src/engine_v2/core/: card.cpp  deck.cpp  evaluator.cpp  pot.cpp
src/go/: go.mod
src/go/client/: poker_client.go
src/include/ai/deep_cfr/: deep_cfr.hpp  info_state.hpp
src/include/engine/: engine.hpp  game_state.hpp  poker_engine.hpp
src/include/engine/betting/: betting_state.hpp
src/include/engine/core/: card.hpp
src/include/engine_v2/core/: card.h  deck.h  evaluator.h  pot.hpp
src/include/engine_v2/logic/: betting_round.hpp  game.h
src/server/: poker_server.cpp
test/: CMakeLists.txt  main.cpp  run.sh  test_player.hpp  unit_tests.cpp
test/engine/: card_test.cpp  deck_test.cpp  evaluator_test.cpp  pot_test.cpp
tests/: CMakeLists.txt  main.cpp  run.sh
tests/engine/: game_test.cpp
tools/examples/engine/: pot_example.cpp
tools/util/: tree.sh
